Revised a few lines and fixed spacing

--- a/kalite/distributed/static/css/distributed/bootstrap-overrides.css
+++ b/kalite/distributed/static/css/distributed/bootstrap-overrides.css
@@ -1,15 +1,15 @@
 /* ===================================
-	Global
+    Global
 =================================== */
 html, body, #background-photo {
-	height: 100%;
+    height: 100%;
 }
 body {
-	margin: 0;
-	padding-top: 79px;
+    margin: 0;
+    padding-top: 79px;
 }
 #background-photo, .row {
-	width: 100%;
+    width: 100%;
 }
 .container {
     max-width: 1000px;
@@ -17,7 +17,8 @@ body {
 a:hover, a:focus {
     text-decoration: none;
 }
-h1, h2, .h4-no-margin-top { margin-top: 0;
+h1, h2, .h4-no-margin-top { 
+    margin-top: 0;
 }
 label {
     margin-top: 10px;
@@ -39,16 +40,16 @@ table {
 
 
 /* ===================================
-	Nav Bar
+    Nav Bar
 =================================== */
 .navbar {
-	border-bottom: 1px solid #999;
+    border-bottom: 1px solid #999;
 }
 .navbar-default {
-	background: #c6d1ad; /* Also controls footer color */
+    background: #c6d1ad; /* Also controls footer color */
 }
 .navbar-brand img { 
-	margin-top: -6px;
+    margin-top: -6px;
 }
 .navbar ul li a {
     color: #333 !important;
@@ -65,7 +66,7 @@ table {
 }
 form#search-box {
     margin-right: 15px;
-	margin-top: 14px;
+    margin-top: 14px;
 }
 input#search.ui-autocomplete-input {
     font-size: 12px;
@@ -73,8 +74,8 @@ input#search.ui-autocomplete-input {
     width: 140px;
 }
 #search-button {
-	color: #fff !important;
-	margin-left: -3px;
+    color: #fff !important;
+    margin-left: -3px;
 }
 #search-button:hover, #search-button:focus {
     background: #4cae4c !important;
@@ -122,8 +123,8 @@ input#search.ui-autocomplete-input {
     padding: 0 30px;
 }
 .suggested-action:hover, .suggested-action:focus {
-    -webkit-box-shadow: 0 0 10px #76A005;
-       -moz-box-shadow: 0 0 10px #76a005;
+    -webkit-box-shadow: 0 0 30px #76A005;
+       -moz-box-shadow: 0 0 30px #76a005;
             box-shadow: 0 0 30px #76a005;
 }
 .suggested-action-title {
@@ -134,7 +135,7 @@ input#search.ui-autocomplete-input {
 
 
 /* ===================================
-	Home Page
+    Home Page
 =================================== */
 .main-headline {
     text-align: center;
@@ -144,7 +145,7 @@ input#search.ui-autocomplete-input {
     color: #777;
     font-size: 1.25em;
 }
-#suggested-action-div:first-child a:hover, #suggested-action:first-child a:focus {
+#suggested-action-div:first-child a:hover, #suggested-action-div:first-child a:focus {
     color: #005987;
     font-weight: bold;
 }
@@ -219,11 +220,11 @@ input#search.ui-autocomplete-input {
 
 
 /* ===================================
-	Footer
+    Footer
 =================================== */
 #wrapper {
-	height: auto !important;
-	height: 100%;
+    height: auto !important;
+    height: 100%;
     margin: 0 auto -78px; 
     min-height: 100%;
 }
@@ -237,8 +238,8 @@ footer a.navbar-brand {
     padding: 0;
 }
 footer {
-	border-top: 1px solid #999 !important;
-	height: 77px;
+    border-top: 1px solid #999 !important;
+    height: 77px;
 }
 footer ul li {
     margin-top: 19px;
@@ -264,7 +265,7 @@ footer ul .pull-right {
 
 
 /* ===================================
-	Media Queries
+    Media Queries
 =================================== */
 @media only screen and (max-width: 1199px) {
     .suggested-action a { font-size: 16px; }
@@ -275,7 +276,6 @@ footer ul .pull-right {
 @media only screen and (max-width: 767px) {
     .main-headline { font-size: 27px; margin-bottom: 0; margin-top: 0; }
     form#search-box, #language_selector { margin-left: 13px; margin-bottom: 10px; }
-    .suggested-action { margin-top: 20px; }
     h3.suggested-action-title { font-size: 24px; padding-top: 15px; }
     .suggested-action .topic-list a { font-size: 1.25em; }
     #fle-logo { margin-top: 0; }
@@ -293,5 +293,5 @@ footer ul .pull-right {
     h3.suggested-action-title { margin-top: 0; }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-	.navbar-brand img { width: 69px; }
+    .navbar-brand img { width: 69px; }
 }
